--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>React sdsd</title>
-
-
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="React boilerplate">
-    <meta name="description" content="">
-
-<body>
-  <div id="app"></div></body>
+  <head>
+    <title>React Boilerplate</title>
+  </head>
+  <body>
+    <div id='root'>
+    </div>
+    <script src="/static/bundle.js"></script>
+  </body>
 </html>
